# transcribe

./: .gitignore  CLAUDE.md  Dockerfile.smoke  README.md  justfile  pyproject.toml
.github/workflows/: tests.yml
docs/: TECHNICAL.md  USER_MANUAL.md
src/anonymize/: cli.py  config.py
src/shared/: config.py  utils.py
src/transcribe/: cli.py  config.py
tests/: test_cli.py  test_config.py  test_smoke.py
