[project]
name = "yt-transcribe"
version = "0.1.0"
description = "YouTube video transcription CLI"
requires-python = ">=3.11"
dependencies = [
    "youtube-transcript-api>=1.2.4",
    "yt-dlp",
    "faster-whisper>=1.2.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "platformdirs>=4.0.0",
]

[project.scripts]
transcribe = "transcribe.cli:app"

[dependency-groups]
dev = ["pytest>=8.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/transcribe"]

[tool.pytest.ini_options]
markers = ["network: requires network access and real external services"]
